# loudness_ebur128

./: .bazelrc  BUILD  CHANGELOG.md  MODULE.bazel  README.md
.github/actions/loudness_ebur128_builder/: action.yml
.github/workflows/: ci.yml
include/: ebur128_analyzer.h
src/: audio_data_access_patterns.h  ebur128_analyzer.cc  ebur128_analyzer.h  k_weighting.cc
